# efi-segundo-semestre-python

./: README.md  alembic.ini  app.py  main.py  models.py  pyproject.toml  schemas.py  views.py
alembic/: env.py
alembic/versions/: 140170cc0973_creando_is_active_en_usecrendetials.py  4d2f56a2361e_creación_inicial.py  5d6fa2acac89_act.py  790d290a5b3d_actualizando_model_usercrendential.py  b3b177ed7e03_mover_rol_a_usercredentials.py  bc8808eb0692_creando_is_active_en_usecrendetials.py  ef1d8565ab15_creando_is_active_en_usecrendetials.py
